--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,8 +6,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: jthicks@gmail.com
-    password: fwplakkapkvbgdoi
+    username: 
+    password: 
     properties:
       mail:
         smtp:
