--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,11 +6,14 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: 
-    password: 
+    username:
+    password:
     properties:
       mail:
         smtp:
           auth: true
           starttls:
             enable: true
+
+topic: logging
+groupId: emailService
