--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,8 +6,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username:
-    password:
+    username: jthicks@gmail.com
+    password: fwplakkapkvbgdoi
     properties:
       mail:
         smtp:
